--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,10 +73,10 @@ body.order-mode .cafe-items {
     max-height: 0 !important;
     opacity: 0 !important;
 }
-.cafe-items:after {
-    content: '';
-    flex-grow: 2;
-}
+/*.cafe-items:after {*/
+/*    content: '';*/
+/*    flex-grow: 2;*/
+/*}*/
 .cafe-item,
 .cafe-item-shadow {
     position: relative;
